# mcp-server-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.qa  README.md  checkpoints.db  checkpoints.db-shm  checkpoints.db-wal  delete_threads.py  docker-compose.qa.yml  docker-compose.yml  langgraph.json  main.py  pyproject.toml  start_mcp.bat  test_chat.ps1  test_mcp.py  test_openrouter.py
File_Agent/: memory.txt
TestDataSet/TestDataSetScript/: run_dataset_trace_only.py  run_dataset_with_evaluate.py
data/: checkpoints.db  checkpoints.db-shm  checkpoints.db-wal  memory_store.db
scripts/: .test3_thread_id.json  cleanup_checkpoints.py  test_checkpoint_resume.py  test_multiuser_memory.py  test_sse_client.py
src/: agent.py  api.py  langgraph_agent.py  langgraph_parallel_agent.py  langgraph_stdio_agent.py  supervisor_agent.py  webapp.py
src/DB/: ecommerce.db  init_db.py  schema.py  server.py  sql_agent_tool.py  test.db
src/DBAgent/: agent.py  optimizer.py  tools.py
src/math-mcp/: .gitignore  Dockerfile  LICENSE  README.md  package.json
src/math-mcp/src/: index.ts
src/math-mcp/src/Classes/: Arithmetic.test.ts  Arithmetic.ts  Statistics.test.ts  Statistics.ts  Trigonometric.test.ts  Trigonometric.ts
src/mcp_db_server/: server.py
src/mcp_server_template/: server.py
tests/: eval_agent.py  eval_dataset3.py  eval_e2e.py  eval_e2e_v2.py  eval_e2e_v3.py  export_run_id.py  export_threads.py  export_trace.py  run_dataset.py  run_trace_replay.py  test_new_tools.py  test_server.py
trace_exports/: thread_f5f2e629_20260506_230637.json
