[project]
name = "mcp-server-template"
version = "0.1.0"
description = "企业级 MCP Server 模板 (uv + Docker)"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.2.0",
    "python-dotenv",
    "pydantic-settings",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pre-commit",
    "pytest-asyncio>=0.24",
]

[tool.uv]
managed = true

# ✅ 补1：告诉构建工具包在 src/ 下
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_template"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4"]



[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_mode = "auto"
